base/namespace-scoped/ingress-gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http-gateway
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: auto-blog-ssl-cert
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
        
  addresses:
  - type: NamedAddress
    value: gke-gateway-gext-lb
